--- a/PF_primer_entrega/package.json
+++ b/PF_primer_entrega/package.json
@@ -3,5 +3,8 @@
   "main": "ProductManager.js",
   "dependencies": {
     "express": "^4.18.2"
-  }
+  },
+  "scripts": {
+    "start": "node app.js"
+   }
 }
